use weighted class to handle imbalance classes

--- a/0830/user_data.ipynb
+++ b/0830/user_data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 透過評論標題做情感分析 (把評分當成類別)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,13 +115,13 @@
      "text": [
       "Building prefix dict from the default dictionary ...\n",
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "I0911 10:29:43.407188 17600 __init__.py:111] Building prefix dict from the default dictionary ...\n",
+      "I0914 17:48:21.103345 21816 __init__.py:111] Building prefix dict from the default dictionary ...\n",
       "Loading model from cache C:\\Users\\Wade\\AppData\\Local\\Temp\\jieba.cache\n",
-      "I0911 10:29:43.408300 17600 __init__.py:131] Loading model from cache C:\\Users\\Wade\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.511 seconds.\n",
-      "I0911 10:29:43.919362 17600 __init__.py:163] Loading model cost 0.511 seconds.\n",
+      "I0914 17:48:21.105345 21816 __init__.py:131] Loading model from cache C:\\Users\\Wade\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.508 seconds.\n",
+      "I0914 17:48:21.612356 21816 __init__.py:163] Loading model cost 0.508 seconds.\n",
       "Prefix dict has been built succesfully.\n",
-      "I0911 10:29:43.919362 17600 __init__.py:164] Prefix dict has been built succesfully.\n"
+      "I0914 17:48:21.613354 21816 __init__.py:164] Prefix dict has been built succesfully.\n"
      ]
     }
    ],
@@ -124,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,8 +142,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "取等長的句子(已經數值化)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +159,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "星等轉成數值"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,22 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(sequence_padded, label_le, test_size=0.3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 透過評論標題做情感分析 (把評分當成類別)"
    ]
   },
   {
@@ -538,20 +550,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0911 10:29:54.713154 17600 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "W0914 17:48:35.462770 21816 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:66: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W0911 10:29:54.737638 17600 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "W0914 17:48:35.479766 21816 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:541: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "W0911 10:29:54.741636 17600 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "W0914 17:48:35.483765 21816 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4432: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
       "\n",
-      "W0911 10:29:55.062246 17600 deprecation.py:323] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3239: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "W0914 17:48:35.809764 21816 deprecation.py:323] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3239: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
      ]
@@ -643,46 +655,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因為class imblance所以給weight"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_weight = {0: 1.,\n",
+    "                1: 3.,\n",
+    "                2: 60.,\n",
+    "                3: 60.,\n",
+    "                4: 60.}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用sklearn自動學出weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0914 17:49:02.040778 21816 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\optimizers.py:793: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "W0914 17:49:02.055873 21816 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3622: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "\n",
+      "W0914 17:49:02.980317 21816 deprecation_wrapper.py:119] From c:\\users\\wade\\.virtualenvs\\19'_summer_vacation-ib8vnh7u\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:1033: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Train on 12988 samples, validate on 3247 samples\n",
       "Epoch 1/10\n",
-      " - 4s - loss: 1.1128 - acc: 0.5750 - val_loss: 1.0533 - val_acc: 0.5627\n",
+      " - 6s - loss: 69.1444 - acc: 0.5671 - val_loss: 52.8746 - val_acc: 0.5642\n",
       "Epoch 2/10\n",
-      " - 2s - loss: 0.9462 - acc: 0.5996 - val_loss: 0.9281 - val_acc: 0.6021\n",
+      " - 2s - loss: 47.2477 - acc: 0.6019 - val_loss: 47.3758 - val_acc: 0.6076\n",
       "Epoch 3/10\n",
-      " - 2s - loss: 0.7903 - acc: 0.6646 - val_loss: 0.8877 - val_acc: 0.6163\n",
+      " - 2s - loss: 40.8332 - acc: 0.6668 - val_loss: 46.6151 - val_acc: 0.5953\n",
       "Epoch 4/10\n",
-      " - 2s - loss: 0.6887 - acc: 0.7114 - val_loss: 0.9060 - val_acc: 0.6116\n",
+      " - 2s - loss: 36.5224 - acc: 0.6984 - val_loss: 47.3106 - val_acc: 0.6073\n",
       "Epoch 5/10\n",
-      " - 2s - loss: 0.6158 - acc: 0.7414 - val_loss: 0.9884 - val_acc: 0.5725\n",
+      " - 2s - loss: 33.3369 - acc: 0.7247 - val_loss: 49.4063 - val_acc: 0.6104\n",
       "Epoch 6/10\n",
-      " - 2s - loss: 0.5789 - acc: 0.7555 - val_loss: 1.0202 - val_acc: 0.5956\n",
+      " - 2s - loss: 31.1894 - acc: 0.7409 - val_loss: 50.7179 - val_acc: 0.5969\n",
       "Epoch 7/10\n",
-      " - 2s - loss: 0.5490 - acc: 0.7673 - val_loss: 1.0575 - val_acc: 0.6002\n",
+      " - 2s - loss: 29.2840 - acc: 0.7530 - val_loss: 53.1656 - val_acc: 0.5996\n",
       "Epoch 8/10\n",
-      " - 2s - loss: 0.5297 - acc: 0.7723 - val_loss: 1.1028 - val_acc: 0.5685\n",
+      " - 2s - loss: 28.0862 - acc: 0.7565 - val_loss: 54.6468 - val_acc: 0.5892\n",
       "Epoch 9/10\n",
-      " - 2s - loss: 0.5126 - acc: 0.7785 - val_loss: 1.1245 - val_acc: 0.5858\n",
+      " - 2s - loss: 26.8375 - acc: 0.7663 - val_loss: 57.3739 - val_acc: 0.5864\n",
       "Epoch 10/10\n",
-      " - 2s - loss: 0.5003 - acc: 0.7873 - val_loss: 1.1704 - val_acc: 0.5778\n"
+      " - 2s - loss: 25.9261 - acc: 0.7691 - val_loss: 60.3580 - val_acc: 0.5747\n"
      ]
     }
    ],
    "source": [
     "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "model_history_attention = model.fit(X_train, y_train, batch_size=300, epochs=10, verbose=2, validation_split=0.2)"
+    "model_history_attention = model.fit(X_train, y_train, batch_size=300, epochs=10, verbose=2, validation_split=0.2, class_weight=class_weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +749,7 @@
        "array([4, 3, 3, ..., 4, 4, 3], dtype=int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
