Reduce the digits of lat and lng

--- a/0829/tw hotel analyst.ipynb
+++ b/0829/tw hotel analyst.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,41 @@
     "for csv in iglob('../0821/*_top500_clean.csv'):\n",
     "    tmp_df = pd.read_csv(csv)\n",
     "    df = df.append(tmp_df, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       23.48583\n",
+       "1       23.48514\n",
+       "2       23.47801\n",
+       "3       23.48274\n",
+       "4       23.50487\n",
+       "          ...   \n",
+       "4042    24.67469\n",
+       "4043    24.67757\n",
+       "4044    24.69095\n",
+       "4045    24.62582\n",
+       "4046    24.66630\n",
+       "Name: lat, Length: 4047, dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_first(x):\n",
+    "    return x[:8]\n",
+    "\n",
+    "# 把經緯度成字串保留想要的位數\n",
+    "df['lat'].astype('str').apply(get_first).astype('float')"
    ]
   },
   {
@@ -21787,8 +21822,8 @@
          "accesstoken": "pk.eyJ1Ijoiam9obm55MTIxNTAiLCJhIjoiY2pjdTk3cjdnMHZpYzJxbW9lZXIyMHNodiJ9.03tDMSde36ogbo4sw059Bw",
          "bearing": 0,
          "center": {
-          "lat": 22.614083897641777,
-          "lon": 123.61750241757068
+          "lat": 24.38354217651178,
+          "lon": 123.24519184914016
          },
          "domain": {
           "x": [
@@ -21801,7 +21836,7 @@
           ]
          },
          "pitch": 0,
-         "zoom": 5.258608968371259
+         "zoom": 4.796939855979042
         },
         "margin": {
          "t": 60
